backend/produit-service/produit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: produit-service
spec:
  ports:
  - name: http
    targetPort: 8081
    port: 80
  selector:
    app: produit
