backend/produit-service/produit-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: produit-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: produit.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: produit-service
          servicePort: http
